# lending-club-credit-risk

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
credit_risk/: data.py  economics.py  fairness.py  features.py  models.py
dashboard/: app.py
models/: lightgbm.txt
notebooks/: 01_eda.ipynb  02_features.ipynb  03_modeling.ipynb  04_calibration_profit.ipynb  05_fairness_explainability.ipynb
