[project]
name = "credit-risk"
version = "0.1.0"
description = "Lending Club credit risk model framed as a profit-optimization problem."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.5",
    "shap>=0.46",
    "seaborn>=0.13",
    "streamlit>=1.40",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["credit_risk"]
